--- a/index.html
+++ b/index.html
@@ -526,9 +526,9 @@
               <!-- Left Section -->
               <div class="text-center lg:text-left mb-4 lg:mb-0">
                   <ul>
-                      <li class="mb-2"><a href="#" class="hover:underline">Home</a></li>
-                      <li class="mb-2"><a href="#" class="hover:underline">Contact Us</a></li>
-                      <li class="mb-2"><a href="#" class="hover:underline">Reviews</a></li>
+                      <li class="mb-2"><a href="#" class="text-white hover:underline">Home</a></li>
+                      <li class="mb-2"><a href="#" class="text-white hover:underline">Contact Us</a></li>
+                      <li class="mb-2"><a href="#" class="text-white hover:underline">Reviews</a></li>
                       <li>
                           <a href="#" class="bg-yellow-500 text-white px-4 py-2 rounded-lg hover:bg-yellow-600 inline-block mt-4 lg:mt-0">Request an Appointment</a>
                       </li>
@@ -545,11 +545,11 @@
                   <p class="mb-2">MON - THU  8:00 am - 5:00 pm</p>
                   <p class="mb-2">FRI - SUN  Closed</p>
                   <div class="flex justify-center lg:justify-end space-x-4 mt-4">
-                      <a href="#" class="hover:text-yellow-700"><i class="fa-brands fa-instagram fa-beat"></i></a>
-                      <a href="#" class="hover:text-yellow-700"><i class="fab fa-facebook fa-beat"></i></a>
-                      <a href="#" class="hover:text-yellow-700"><i class="fab fa-youtube fa-beat"></i></a>
-                      <a href="#" class="hover:text-yellow-700"><i class="fab fa-google fa-beat"></i></a>
-                      <a href="#" class="hover:text-yellow-700"><i class="fab fa-yelp fa-beat"></i></a>
+                      <a href="#" class="text-white hover:text-yellow-700"><i class="fa-brands fa-instagram fa-beat"></i></a>
+                      <a href="#" class="text-white hover:text-yellow-700"><i class="fab fa-facebook fa-beat"></i></a>
+                      <a href="#" class="text-white hover:text-yellow-700"><i class="fab fa-youtube fa-beat"></i></a>
+                      <a href="#" class="text-white hover:text-yellow-700"><i class="fab fa-google fa-beat"></i></a>
+                      <a href="#" class="text-white hover:text-yellow-700"><i class="fab fa-yelp fa-beat"></i></a>
                   </div>
               </div>
           </div>
@@ -557,9 +557,9 @@
           <div class="border-t border-yellow-500 mt-6 pt-4 flex flex-col lg:flex-row justify-between items-center text-sm">
               <p class="text-center lg:text-left mb-2 lg:mb-0">&copy; Copyright 2024 GrowthPlug, Inc</p>
               <div class="flex space-x-4">
-                  <a href="#" class="hover:underline">Privacy Policy</a>
-                  <a href="#" class="hover:underline">Terms and Conditions</a>
-                  <a href="#" class="hover:underline">Accessibility Statement</a>
+                  <a href="#" class="text-white hover:underline">Privacy Policy</a>
+                  <a href="#" class="text-white hover:underline">Terms and Conditions</a>
+                  <a href="#" class="text-white hover:underline">Accessibility Statement</a>
               </div>
           </div>
       </div>
